# EGX_Ingestion

./: .egxrc  .env.example  .gitignore  AGENTS.md  CAVEMAN_AUDIT.md  COMMUNICATION_PROTOCOL.md  CURRENT_STATE.md  DECISIONS.md  EXPERIMENT_LOG.md  GIT_PUBLISH_AUDIT.md  HANDOFF.md  INGESTION_PROTOCOL.md  LICENSE  NEXT_MISSION.md  PATCH_PLAN.md  PRODUCTION_CANDIDATES.md  PUBLICATION_AUDIT.md  QUALITY_AUDIT.md  README.md  RISK_REGISTER.md  RUNBOOK.md  SECURITY.md  SOURCE_INDEX.md  THEME_MAP.md  USER_CONTEXT.md  pyproject.toml
.agents/skills/: README.md
.codex/skills/: README.md
.github/workflows/: validate-workspace.yml
_archive/: README.md
doctrine/: CORE.md  INGESTION.md  MEMORY_HIERARCHY.md
egx/: __init__.py  check.py  config.py  exporter.py  ingest.py  logs.py  main.py  review.py
experiments/: EXP-0002-minimal-implementation-ladder.md  README.md  _template_experiment.md
inbox/: README.md  sources_to_ingest.md
logs/: README.md  command-log.md  ingestion-log.md
memory/: FORMAT.n3.md  INDEX.n3
repos/: README.md
scripts/: README.md  check_workspace.ps1
skills/: README.md
skills/repo-lab-test/: SKILL.md
skills/source-ingestion/: SKILL.md
skills/transversal-synthesis/: SKILL.md
sources/: README.md  _template_source_note.md  github-dietrichgebert-ponytail.md
templates/: card.n3.md  experiment-template.md  handoff-template.md  ingestion-report-template.md  mission.md  next-mission-template.md  note.n2.md  production-candidate-template.md  source-note-template.md  source.n1.md  theme-note-template.md
themes/: README.md
(+20 files in other folders)
