[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "egx-ingestion"
version = "0.1.0"
description = "Minimal agent-first source ingestion CLI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
vector = [
    "lancedb>=0.20",
]

[project.scripts]
egx = "egx.main:app"

[tool.setuptools.packages.find]
include = ["egx*"]
